<resources>
    <string name="app_name">KoliKaja</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string translatable="false" name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">KajaKoli</string>
    <string name="channel_description">KajaKoli</string>
    <string name="all_food">All food</string>
    <string name="sign_out">Sign out</string>
    <string name="user">User</string>
    <string name="remove_food">Remove food</string>
    <string name="add_food">Add food</string>
    <string name="card_food_name">Food name</string>


    <string name="food_s_name">Food\'s name</string>
    <string name="_500_ft">500 Ft</string>
    <string name="magi">Magi</string>
    <string name="message_from_user">Message from user:</string>
    <string name="message">Message</string>
    <string name="food_photo">Food photo</string>
    <string name="foodname">Foodname</string>
    <string name="string_price" />
    <string name="place">Place</string>
    <string name="expiration">Expiration</string>
    <string name="date">Date</string>
    <string name="description">description</string>
    <string name="buy">Buy</string>
    <string name="add_new_food">Add new food</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="select_picture">Select Picture</string>
    <string name="ft">Ft</string>
    <string name="e_g_no_salt_added">e.g No salt added</string>
    <string name="price">Price</string>
    <string name="place_room_nr">Place, room nr.</string>
    <string name="publish">Publish</string>
    <string name="Food_name_add">Food\'s name</string>

    <string name="food_ss_name">Food\'s name</string>
    <string name="place_room">Place/ room</string>
    <string name="pick_a">Pick a date</string>
    <string name="pricetag">Price</string>
    <string name="e_g_no_salt">e.g not salted</string>

    <string name ="deletemsg">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sww">Something went wrong!</string>
    <string name="us">Uploaded successfully!</string>
    <string name="odcbe">Only description can be empty</string>
    <string name="pickimage">You haven\'t picked an image</string>

    <string name="hint1">I\'ll be there in 5 minutes...</string>
    <string name="hint2">Send message to seller</string>
    <string name="hint3">Buy Item</string>


</resources>