<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_add_food"
    tools:context=".AddFood">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/add_new_food"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="clip_vertical"
                    android:layout_margin="4dp">

                    <TextView
                        android:id="@+id/Food_name_add"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Food_name_add"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/etFoodName"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/food_ss_name"
                        android:inputType="textPersonName" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="clip_vertical"
                    android:layout_margin="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/place"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/etPlace"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/place_room"
                        android:textColorHint="#757575"
                        android:inputType="textPersonName" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="clip_vertical"
                    android:layout_margin="4dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/expiration"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btnDatePick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_date_range_24"
                        android:text="@string/pick_a" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="clip_vertical"
                    android:layout_margin="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/etPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:ems="10"
                        android:hint="@string/pricetag"
                        android:inputType="number|textPersonName" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ft"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="top|start"
                android:hint="@string/e_g_no_salt"
                android:inputType="textMultiLine"
                android:lines="1"
                android:maxLines="2"
                android:minHeight="48dp"
                android:minLines="1"
                android:scrollbars="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCamera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_baseline_camera_alt_24"
                    android:text="@string/take_a_picture" />

                <Button
                    android:id="@+id/btnGallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_baseline_image_24"
                    android:text="@string/select_picture" />

            </LinearLayout>

            <ImageView
                android:id="@+id/ivFoodPic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"/>
<!--                android:src="@drawable/ic_baseline_image_24" />-->

            <Space
                android:layout_width="match_parent"
                android:layout_height="43dp" />

            <Button
                android:id="@+id/btnPublish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:drawableLeft="@drawable/ic_baseline_publish_24"
                android:text="@string/publish" />

            <ProgressBar
                android:id="@+id/pbUpload"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="88dp" />

        </LinearLayout>

    </ScrollView>
</FrameLayout>